	* New operator: selltype, setltype, chltype, showltype [together with Frida Brantvall]
	* New operator: setpartabv
	* add new parameter table format
	* fix problems on cygwin [report: Mark Hadfield]
	* merge: move vlistDestroy after streamClose [report: Matthias Cuntz]
	* gradsdes: fix bug for only one record without time [report: Angelika Heil]
	* namelist update
	* New module: Setbox [Etienne Tourigny)
	* history format changed to nco [Etienne Tourigny)
	* process: set MAX_ARGS from 1024 to 8192
	* Version 1.0.1 released

2006-06-15  Uwe Schulzweida  <schulzweida@dkrz.de>

	* using CDI library version 1.0.0
	* New operator: dv2ps (Wind) [request: Luis Kornblueh]
	* New module: Arithlat (mulcoslat, divcoslat) <- docu missing
	* setreftime: use taxisDuplicate to copy bounds [report: Ivonne Anders]
	* Seasstat: bug fix for datasets with only 1 season [report: Simon Blessing]
	* Vertint: remove special treatment for geopoth
	* configure: check compiler version
	* Version 1.0.0 released

2006-05-04  Uwe Schulzweida  <schulzweida@dkrz.de>

	* using CDI library version 0.9.7
	* New module: Mergetime [request: Stefanie Legutke]
	* New operator: atan2 (Arith) [request: Tom Hardy]
	* New operator: abs (Math) [request: Reiner Schnur]
	* New module: Enlargegrid [request: Tom Hardy] <- docu missing
	* New module: Input (input inputext inputsrv)
	* Invert: fix memory release problem [report: Tom Hardy]
	* setzaxis: set MAX_LINE_LEN from 1024 to 65536 [bug report: Martine Michou]
	* enlarge: update for zonal and meridional data [request: Wolfgang Mueller]
	* gradsdes: bug fix for unsorted GRIB data [report: Stefan Bauer]
	* splitzaxis: generate file name from zaxisID+1 [bug report: Martina Stockhaus]
	* splitgrid:  generate file name from gridID+1
	* Vardup: bug fix for missing values
	* Timsort: bug fix for time constant fields
	* Mastrfu: set units to [kg/s] [report: Rita Seiffert]
	* Merstat: call gridWeights only if needed